# legend-dataflow-scripts

./: .gitignore  pyproject.toml
src/legenddataflowscripts/par/geds/dsp/: eopt.py  evtsel.py  nopt.py  pz.py
src/legenddataflowscripts/tier/: dsp.py
src/legenddataflowscripts/utils/: log.py
