[build-system]
requires = [
    "setuptools>=61.2",
    "setuptools_scm[toml]>=7"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
zip-safe = false
license-files = [
    "LICENSE.md",
]
py-modules = []

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/legenddataflowscripts/_version.py"

[project]
name = "legend-dataflow-scripts"
description = "Python package for the processing scripts for LEGEND-200 data"
authors = [
    {name = "George Marshall", email = "ggmarsh@uw.edu"},
    {name = "Luigi Pertoldi", email = "gipert@pm.me"},
]
maintainers = [
    {name = "The LEGEND Collaboration"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
]
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["version"]

dependencies = [
    "colorlog",
    "dbetto>=1.2.3",
    "pygama>=2.3",
    "dspeed>=2.0",
    "pylegendmeta>=1.2.5",
    "legend-pydataobj>=1.16",
    "pip",
]
# "legend-daq2lh5 @  file:///${PROJECT_ROOT}/software/python/src/legend-daq2lh5
# "pygama @ file:///${PROJECT_ROOT}/software/python/src/pygama",
# "dspeed @ file:///${PROJECT_ROOT}/software/python/src/dspeed",
# "legend-pydataobj @ file:///${PROJECT_ROOT}/software/python/src/legend-pydataobj",

[project.optional-dependencies]
# these are needed to run the data production
test = [
    "legend-dataflow-scripts",
    "pytest>=6",
    "pytest-cov>=3",
]
dev = [
    "legend-dataflow-scripts[test]",
    "pre-commit",
]
docs = [
    "sphinx>=7.0",
    "myst_parser>=0.13",
    "sphinx_inline_tabs",
    "sphinx_copybutton",
    "sphinx_autodoc_typehints",
    "furo>=2023.08.17",
]

[project.scripts]
dataflow                = "legenddataflowscripts.workflow.execenv:dataflow"
build-filedb            = "legenddataflowscripts.workflow.filedb:build_filedb"
build-tier-dsp          = "legenddataflowscripts.tier.dsp:build_tier_dsp"
build-tier-hit          = "legenddataflowscripts.tier.hit:build_tier_hit"
build-tier-dsp-single-channel = "legenddataflowscripts.tier.dsp:build_tier_dsp_single_channel"
build-tier-hit-single-channel = "legenddataflowscripts.tier.hit:build_tier_hit_single_channel"
par-geds-dsp-dplms      = "legenddataflowscripts.par.geds.dsp.dplms:par_geds_dsp_dplms"
par-geds-dsp-eopt       = "legenddataflowscripts.par.geds.dsp.eopt:par_geds_dsp_eopt"
par-geds-dsp-evtsel     = "legenddataflowscripts.par.geds.dsp.evtsel:par_geds_dsp_evtsel"
par-geds-dsp-nopt       = "legenddataflowscripts.par.geds.dsp.nopt:par_geds_dsp_nopt"
par-geds-dsp-svm-build  = "legenddataflowscripts.par.geds.dsp.svm_build:par_geds_dsp_svm_build"
par-geds-dsp-svm        = "legenddataflowscripts.par.geds.dsp.svm:par_geds_dsp_svm"
par-geds-dsp-pz         = "legenddataflowscripts.par.geds.dsp.pz:par_geds_dsp_pz"
par-geds-hit-aoe        = "legenddataflowscripts.par.geds.hit.aoe:par_geds_hit_aoe"
par-geds-hit-ecal       = "legenddataflowscripts.par.geds.hit.ecal:par_geds_hit_ecal"
par-geds-hit-lq         = "legenddataflowscripts.par.geds.hit.lq:par_geds_hit_lq"
par-geds-hit-qc         = "legenddataflowscripts.par.geds.hit.qc:par_geds_hit_qc"

[tool.uv.workspace]
exclude = []

[tool.uv]
default-groups = []

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
  "error",
]
log_cli_level = "INFO"
testpaths = [
  "tests",
]

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
extend-select = [
  "ARG",      # flake8-unused-arguments
  "B",        # flake8-bugbear
  "C4",       # flake8-comprehensions
  "EM",       # flake8-errmsg
  "EXE",      # flake8-executable
  "G",        # flake8-logging-format
  "I",        # isort
  "ICN",      # flake8-import-conventions
  "NPY",      # NumPy specific rules
  "PD",       # pandas-vet
  "PGH",      # pygrep-hooks
  "PIE",      # flake8-pie
  "PL",       # pylint
  "PT",       # flake8-pytest-style
  "PTH",      # flake8-use-pathlib
  "RET",      # flake8-return
  "RUF",      # Ruff-specific
  "SIM",      # flake8-simplify
  "T20",      # flake8-print
  "UP",       # pyupgrade
  "YTT",      # flake8-2020
]
ignore = [
  "PT011",    # `pytest.raises(ValueError)` is too broad
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
  "ISC001",   # Conflicts with formatter
]
isort.required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
"noxfile.py" = ["T20"]


[tool.pylint]
py-version = "3.9"
ignore-paths = [".*/_version.py"]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "design",
  "fixme",
  "line-too-long",
  "missing-module-docstring",
  "missing-function-docstring",
  "wrong-import-position",
  "too-many-nested-blocks"
]
